# SoulforgeRoll

./: .gitignore  README.md  clean_index.py  constelacion.html  demo_aric.html  demo_elara.html  demo_gacha.html  demo_sheet_sss.html  demo_sss_strict.html  index.html  index_temp_fragment.txt  muro_caidos.html  rpg_engine_temp.js  vercel.json
D&D Soulforge/: ARQUITECTURA_RAILWAY_OPTIMIZADA.md  LA_CRONICA_VISUAL.md  MANUAL_DE_INTEGRACION_Y_CONSOLA_DM.md  MECANICAS_NIEBLA_Y_CAMARA.md  demo_soulforge.html  import_test.html  personaje_prueba.json  soulforge_cinematic.html  soulforge_lobby_epic.html
SpriteEngine/: README.md  example_usage.py
SpriteEngine/motor_de_historia/: .gitignore  README.md
SpriteEngine/motor_de_historia/backend/: .dockerignore  Cargo.toml  Dockerfile  Lanzar_Daithon_TTS.bat  SKILL_SYSTEM_DESIGN.txt  tts_server.py
SpriteEngine/motor_de_historia/backend/groq_integration/: .gitignore  README.md  groq_enhancer.py
SpriteEngine/motor_de_historia/backend/src/: handlers.rs  lib.rs  main.rs  protocol.rs  room.rs
SpriteEngine/motor_de_historia/backend/src/api/: handlers.rs  handlers_new.rs  mod.rs  routes.rs  souls.rs
SpriteEngine/motor_de_historia/backend/src/cartographer/: mod.rs  parser.rs  world_generator.rs
SpriteEngine/motor_de_historia/backend/src/constelacion/: mod.rs
SpriteEngine/motor_de_historia/backend/src/core/: adapter.rs  alma.rs  arco.rs  biografia.rs  biografia_bloques_extra.rs  capas.rs  conexiones.rs  gramatica.rs  i18n.rs  ia_integration.rs  identidad.rs  items.rs  mod.rs  mundo_narrativo.rs  narrativa.rs  procedural_text.rs  promo.rs  skills.rs
SpriteEngine/motor_de_historia/backend/src/exportadores/: json.rs  markdown.rs  mod.rs
SpriteEngine/motor_de_historia/backend/src/relaciones/: mod.rs  quimica.rs  vinculos.rs
SpriteEngine/motor_de_historia/backend/src/souls/: echo.rs  lineage.rs  mod.rs
SpriteEngine/motor_de_historia/frontend/: configuracion_destino.html  demo_elara.html  demo_gacha.html  demo_sala_espera.html  demo_skills.html  demo_sss_strict.html  dm_panel.html  editor_libros.html  forja_de_almas.html  index.html  (+6 more)
SpriteEngine/rust_backend/: Cargo.toml
forja de historias/soulforge-engine/: Cargo.toml
forja de historias/soulforge-engine/src/: conflict_forge.rs  destiny_director.rs  lib.rs  soul_parser.rs  tension_engine.rs  world_seed.rs
frontend-clean/: README.md  informe_descarga.html
payment-form-api/: .env  index.html  package-lock.json  package.json  start_server.bat  vite.config.ts
payment-form-api/server/: index.js
payment-form-api/src/: App.tsx  index.css
(+144 files in other folders)
