[package]
name = "soulforge"
version = "2.1.0"
edition = "2021"
description = "Servidor de Generación de Personajes con Alma Profunda"

[dependencies]
# Web Server
actix-web = "4.4"
actix-files = "0.6"
actix-cors = "0.6"

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Aleatoriedad
rand = "0.8"
rand_chacha = "0.3"
noise = "0.8"

# Utilidades
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.10"

# Templating (para generar el HTML/PDF visual)
tera = "1.19"
once_cell = "1.18"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

[[bin]]
name = "soulforge"
path = "src/main.rs"

[lib]
name = "soulforge"
path = "src/lib.rs"
